[package]
name = "box_key_matrix"
version = "0.1.0"
authors = ["Tyberius Prime <tyberius_prime@coonabibba.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = {version="0.2.3", features=["unproven"]}
no-std-compat = {version="0.1.0", features=["alloc", ]}
smallbitvec = "2.4.0"
stm32f1xx-hal = {version = "0.3.0", features = ["rt", "stm32f103" ] }